--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "test",
   "dependencies": {
-    "@dataform/core": "2.4.2"
-  }
+    "@dataform/core": "2.4.2",
+    "@google-cloud/bigquery": "^6.0.0"
+  },
+  "devDependencies": {
+    "@dataform/cli": "^3.0.0-beta.2"
 }
+}
+
